--- a/src/Components/AccountManage/TeamList/TeamList.scss
+++ b/src/Components/AccountManage/TeamList/TeamList.scss
@@ -10,12 +10,10 @@ $border-color: #B2B2B2;
         padding: 30px 20px 13px;
         border-bottom: 1px solid #ccc;
         .t_l_time{
-            border-bottom: 1px dotted #8B8D92;
-            padding-bottom: 15px;
+            padding-bottom: 10px;
             .t_m_date_classify{
                 display: inline-block;
-                width: 70px;
-                text-align: right;
+                margin-left: 30px;
             }
             .t_l_time_row{
                 @include lh(30px);
@@ -23,86 +21,32 @@ $border-color: #B2B2B2;
                 li{
                     float: left;
                 }
-            }
-            .t_m_line{
-                margin: 3px 20px 0;
-                height: 22px;
-                border-left: 1px solid #AFAFAF;
-            }
-            .t_l_time_btn{
-                box-sizing: border-box;
-                @include lh(30px);
-                li{
+                li:first-child{
+                    margin-left: 15px;
+                }
+                .l_b_user_name{
                     box-sizing: border-box;
-                    @include lh(30px);
-                    padding: 0 8px;
-                    border:1px solid $border-color;
-                    margin-right: 3px;
-                    &:hover{
-                        cursor: pointer;
-                        background-color: #ddd;
-                    }
-                }
-                li:not(:first-child){
-                    border-left:1px solid $border-color;
-                }
-                .t_l_time_btn_active{
-                    box-sizing: border-box;
-                    height: 30px;
-                    border:1px solid #CB1313 !important;
-                    color:#CB1313;
-                    background: #FFF5F5 url('./Img/time_active.png') no-repeat right bottom;
-                }
-            }
-            .t_l_classify{
-                @include lh(30px);
-                li{
-                    float: left;
-                    margin-right: 30px;
-                    .l_b_user_name{
-                        box-sizing: border-box;
-                        border: 1px solid $border-color;
-                        padding: 3px 5px;
-                        @include lh(30px);
-                        margin-left: 8px;
-                        width: 120px;
-                    }
-                }
-                li:last-child{
-                    margin: 0;
-                }
-                .t_l_border{
-                    box-sizing: border-box;
-                    @include lh(30px);
-                    display: inline-block;
                     border: 1px solid $border-color;
-                    padding: 0 10px;
+                    padding: 3px 5px;
+                    @include lh(30px);
                     margin-left: 8px;
-                    &:hover{
-                        cursor: pointer;
-                        background-color: #ddd;
-                    }
+                    width: 130px;
+                }
+                .l_b_balance{
+                    border: 1px solid $border-color;
+                    @include lh(30px);
+                    padding: 3px 5px;
+                    width: 70px;
                 }
                 .t_m_serch{
                     height: 30px;
-                    margin-left: 5px;
+                    margin-left: 12px;
                     &:hover{
                         cursor: pointer;
                     }
                 }
             }
-        }
-        .t_m_select_lottery{
-            margin-top: 12px;
-            padding: 0 5px;
-            li{
-                float: left;
-                margin: 0 25px 10px 0;
-            }
-            .ant-checkbox-checked .ant-checkbox-inner, .ant-checkbox-indeterminate .ant-checkbox-inner {
-                background-color: #CB1313;
-                border-color: #CB1313;
-            }
+
         }
     }
     .t_l_table{
@@ -129,6 +73,11 @@ $border-color: #B2B2B2;
         tr{
             background-color: #ECFEFF;
         }
+    }
+    .ant-input{
+        @include borderRadius(0);
+        border: 1px solid $border-color;
+        height: 30px;
     }
 }
 .t_l_prompt{
