--- a/src/Components/StatementManage/StatementManage.scss
+++ b/src/Components/StatementManage/StatementManage.scss
@@ -4,7 +4,7 @@
 .s_m_main{
     $background-color: #4A4A5F;
     .a_m_controler{
-        background-color: #fff;
+        background-color: #F4F4F4;
         margin: 11px 0 20px 5px;
         font-size: 15px;
         .a_m_title{
@@ -12,29 +12,38 @@
             padding-left: 22px;
             font-size: 14px;
             color:$background-color;
-            background-color: #F4F4F4;
         }
         .a_m_nav{
             background-color: #3E3E49;
             color: #fff;
             @include lh(45px);
+            padding-left: 15px;
         }
         .a_m_nav_list{
             li{
+                a{
+                    display: inline-block;
+                    color: #fff;
+                    @include wh(116px, 45px);
+                    text-align: center;
+                }
                 float: left;
-                padding: 0 28px;
                 &:hover{
                     cursor: pointer;
                     background-color: #ddd;
-                    color:#3A2C0F;
+                    a{
+                        color:#3A2C0F;
+                    }
                 }
             }
             .a_m_nav_active{
                 box-sizing: border-box;
                 background-color: #fff;
-                color:#3A2C0F;
                 border-top: 2px solid #CB1313;
                 @include lh(45px);
+                a{
+                    color:#3A2C0F;
+                }
             }
         }
         .ant-select-selection{
