--- a/src/Components/Common/HeaderNav/headerNav.scss
+++ b/src/Components/Common/HeaderNav/headerNav.scss
@@ -32,6 +32,11 @@ $hover-color: #FFDB70;
             font-size: 10px;
             color: #868686;
         }
+        a{
+            width: 96px;
+            height: 52px;
+            display: inline-block;
+        }
     }
     .nav-text:hover{
         color: $hover-color;
@@ -56,6 +61,9 @@ $hover-color: #FFDB70;
     .ant-menu-horizontal > .ant-menu-item:hover, .ant-menu-horizontal > .ant-menu-submenu:hover, .ant-menu-horizontal > .ant-menu-item-active, .ant-menu-horizontal > .ant-menu-submenu-active, .ant-menu-horizontal > .ant-menu-item-open, .ant-menu-horizontal > .ant-menu-submenu-open, .ant-menu-horizontal > .ant-menu-item-selected, .ant-menu-horizontal > .ant-menu-submenu-selected{
         border-bottom: 3px solid $hover-color !important;
         color: $hover-color !important;
+    }
+    .ant-menu-item, .ant-menu-submenu-title{
+        padding: 0;
     }
 }
 
