--- a/src/Style/variables.scss
+++ b/src/Style/variables.scss
@@ -2,6 +2,7 @@ $nav-width: 1200px;
 $content-top: 11px;
 $nav-background: #ccc;
 $nav-background-color: #1B1B21; // header_nav，footer背景色
+$rodio-check-color: #CB1313;
 
 
 $background-color: #f4f8f9;
