--- a/src/Components/AccountManage/Marketing/Marketing.scss
+++ b/src/Components/AccountManage/Marketing/Marketing.scss
@@ -9,8 +9,7 @@
         border-bottom: 1px dotted #85888D;
     }
     .marke_k_list{
-        width: 350px;
-        margin: 50px auto 30px;
+        margin: 50px 0 30px 100px;
         li{
             margin: 12px 0;
             color:#363636;
@@ -25,7 +24,7 @@
             @include borderRadius(2px);
             li{
                 float:left;
-                @include lh(32px);
+                @include lh(30px);
                 margin: 0;
                 padding: 0 20px;
                 &:hover{
@@ -41,7 +40,7 @@
     .marke_k_left{
         display: inline-block;
         width: 110px;
-        text-align: right;
+        text-align: left;
         padding-right: 17px;
     }
     .ant-input {
