--- a/src/Style/variables.scss
+++ b/src/Style/variables.scss
@@ -1,17 +1,8 @@
-$nav-width: 1200px;
+$nav_width_1200: 1200px;
 $content-top: 11px;
 $nav-background: #ccc;
 $nav-background-color: #1B1B21; // header_nav，footer背景色
 $rodio-check-color: #CB1313;
-
-
-$background-color: #f4f8f9;
-$profile-font-color: $background-color;
-
-$career-title-color: #1899d1;
-
-$career-font-size-3: #333333;
-$career-font-size-6: #666666;
-$career-font-size-9: #999999;
-
-$font-family: '';
+$background-color: #4A4A5F;
+$color_363636: #363636;
+$color_CF2027: #CF2027;
