--- a/src/Components/Common/Footer/Footer.scss
+++ b/src/Components/Common/Footer/Footer.scss
@@ -8,7 +8,7 @@
     color:#D1D1D1;
     font-size: 12px;
     .f_partner_list{
-        width: 1200px;
+        width: $nav_width_1200;
         margin: 0 auto;
         li{
             float: left;
@@ -35,7 +35,7 @@
     }
 }
 .f_bottom{
-    width: 1200px;
+    width: $nav_width_1200;
     @include lh(45px);
     margin: 0 auto;
     .footer_bottom{
