--- a/src/Components/Common/HeaderNav/headerNav.scss
+++ b/src/Components/Common/HeaderNav/headerNav.scss
@@ -9,7 +9,7 @@ $hover-color: #FFDB70;
     width: 100%;
     background: $nav-background-color;
     .nav-content{
-        @include wh($nav-width, $nav-height);
+        @include wh($nav_width_1200, $nav-height);
         margin: 0 auto;
         .logo{
             //vertical-align: middle;
@@ -36,16 +36,17 @@ $hover-color: #FFDB70;
             width: 96px;
             height: 52px;
             display: inline-block;
+            color: #fff;
+            &:hover{
+                p{
+                    color: $hover-color;
+                }
+            }
         }
     }
-    .nav-text:hover{
-        color: $hover-color;
-    }
-    a{
-        color: #fff !important;
-    }
+
     .ant-menu-item:hover, .ant-menu-item-active, .ant-menu:not(.ant-menu-inline) .ant-menu-submenu-open, .ant-menu-submenu-active, .ant-menu-submenu-title:hover {
-        color: $hover-color !important;
+        color: $hover-color;
     }
     .ant-dropdown-link{
         color: #fff;
@@ -54,17 +55,32 @@ $hover-color: #FFDB70;
         border: 0;
     }
     .ant-menu{
-        background: $nav-background-color !important;
-        color: #fff !important;
+        background: $nav-background-color;
+        color: #fff;
     }
 
     .ant-menu-horizontal > .ant-menu-item:hover, .ant-menu-horizontal > .ant-menu-submenu:hover, .ant-menu-horizontal > .ant-menu-item-active, .ant-menu-horizontal > .ant-menu-submenu-active, .ant-menu-horizontal > .ant-menu-item-open, .ant-menu-horizontal > .ant-menu-submenu-open, .ant-menu-horizontal > .ant-menu-item-selected, .ant-menu-horizontal > .ant-menu-submenu-selected{
-        border-bottom: 3px solid $hover-color !important;
-        color: $hover-color !important;
+        border-bottom: 3px solid $hover-color;
+        color: $hover-color;
     }
     .ant-menu-item, .ant-menu-submenu-title{
         padding: 0;
     }
+    .ant-menu-submenu-horizontal, .ant-menu-submenu{
+        .ant-menu{
+            background: rgba(27,27,33,.8);
+            color: #fff;
+        }
+    }
+    //.c_p_game{
+    //    .ant-menu-submenu-horizontal > .ant-menu{
+    //        width: $nav_width_1200;
+    //        left: -600px;
+    //    }
+    //    .ant-menu-item-group{
+    //        float: left;
+    //    }
+    //}
 }
 
 
