--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -15,7 +15,7 @@ footer{
     background: url('../../Images/betCenter_bg.jpg') no-repeat;
     background-size: 100% 614px;
     .main{
-        width: $nav-width;
+        width: $nav_width_1200;
         min-height: 700px;
         margin: 0 auto 20px;
     }
