--- a/src/Style/base.scss
+++ b/src/Style/base.scss
@@ -18,5 +18,65 @@
     overflow: hidden;
 }
 
+.main_width{
+    width: $nav_width_1200;
+    margin: 0 auto;
+}
+
+/*二级导航栏样式*/
+.a_m_controler{
+        background-color: #F4F4F4;
+        margin: 11px 0 20px 5px;
+        font-size: 15px;
+        .a_m_title{
+            @include lh(50px);
+            padding-left: 22px;
+            font-size: 14px;
+            color:$background-color;
+            background-color: #F4F4F4;
+        }
+        .a_m_nav{
+            background-color: #3E3E49;
+            color: #fff;
+            padding-left: 15px;
+            @include lh(45px);
+        }
+        .a_m_nav_list{
+            li{
+                a{
+                    display: inline-block;
+                    color: #fff;
+                    @include wh(116px, 45px);
+                    text-align: center;
+                }
+                float: left;
+                &:hover{
+                    cursor: pointer;
+                    background-color: #ddd;
+                    color:#3A2C0F;
+                    a{
+                        color:#3A2C0F;
+                    }
+                }
+            }
+            .a_m_nav_active{
+                box-sizing: border-box;
+                background-color: #fff;
+                border-top: 2px solid #CB1313;
+                @include lh(45px);
+                color:#3A2C0F;
+                a{
+                    color:#3A2C0F;
+                }
+            }
+        }
+        .a_m_nav_list_p{
+            li{
+                padding: 0 20px;
+            }
+        }
+    }
+
+
 
 
