--- a/src/Style/variables.scss
+++ b/src/Style/variables.scss
@@ -6,3 +6,4 @@ $rodio-check-color: #CB1313;
 $background-color: #4A4A5F;
 $color_363636: #363636;
 $color_CF2027: #CF2027;
+$background-color-F4F4F4: #F4F4F4;
