--- a/src/Components/FinancingCenter/Recharge/Recharge.scss
+++ b/src/Components/FinancingCenter/Recharge/Recharge.scss
@@ -106,9 +106,6 @@ $border_color: #C8C8C8;
         }
     }
     .r_m_primary_btn{
-        padding: 50px 0 350px 180px;
-    }
-    .ant-btn-lg {
-        padding: 6px 33px 8px 33px;
+        padding: 50px 0 350px 0;
     }
 }
