--- a/src/Style/base.scss
+++ b/src/Style/base.scss
@@ -46,13 +46,13 @@
                 a{
                     display: inline-block;
                     color: #fff;
-                    @include wh(116px, 45px);
+                    @include wh(116px, 43px);
                     text-align: center;
                 }
                 float: left;
                 &:hover{
                     cursor: pointer;
-                    background-color: #ddd;
+                    background-color: #fff;
                     color:#3A2C0F;
                     a{
                         color:#3A2C0F;
