--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -1,5 +1,7 @@
 @import '../../Style/variables';
 @import '../../Style/mixin';
 
-.financing_c_main{
+.login{
+    width: 200px;
+    margin: 100px auto;
 }
