--- a/src/Components/Common/HeaderNav/headerNav.scss
+++ b/src/Components/Common/HeaderNav/headerNav.scss
@@ -5,11 +5,82 @@
 $nav-height: 80px;
 $menus-top: 25px;
 $hover-color: #FFDB70;
+$width_100: 100%;
+
+.nav_top{
+    @include wh($width_100, 40px);
+    line-height: 40px;
+    background: #A30404;
+    font-size: 14px;
+    .nav_top_content{
+        width: $nav_width_1200;
+        margin: 0 auto;
+        color: #fff;
+        a{
+            color: #fff;
+        }
+    }
+    .n_t_lt{
+        padding-left: 25px;
+        background: url(./Img/notice_icon.png) no-repeat center left;
+    }
+    .n_t_list{
+        li{
+            padding: 0 15px;
+            float: left;
+            border-left: 1px solid #770000;
+            &:hover{
+                background: #770000;
+            }
+            &:last-child{
+                border-right: 1px solid #770000;
+            }
+        }
+        .n_t_cursor:hover{
+            cursor: pointer;
+        }
+        .n_t_message{
+            width: 80px;
+        }
+        .ant-badge-count{
+            @include lh(17px);
+            padding: 0 4px;
+            background:#1E1E1E;
+            box-shadow: none;
+            -webkit-transform: translateX(-10%);
+            -ms-transform: translateX(-10%);
+            transform: translateX(-10%);
+        }
+        .n_t_balance{
+            color: #FFDB70;
+            i{
+                font-style: normal;
+            }
+
+        }
+        .n_t_hide_balance{
+            padding: 0 5px;
+            &:hover{
+                cursor: pointer;
+            }
+        }
+        .ant-dropdown{
+            top: 50px !important;
+        }
+        .ant-dropdown-menu{
+            background-color: #1D1D26;
+        }
+    }
+     .anticon-caret-down{
+         font-size: 12px;
+         color: #610000;
+    }
+}
 .nav{
-    width: 100%;
+    @include wh($width_100, $nav-height);
     background: $nav-background-color;
     .nav-content{
-        @include wh($nav_width_1200, $nav-height);
+        width: $nav_width_1200;
         margin: 0 auto;
         .logo{
             //vertical-align: middle;
@@ -82,5 +153,6 @@ $hover-color: #FFDB70;
     //    }
     //}
 }
+
 
 
