--- a/src/Components/FinancingCenter/Recharge/Recharge.scss
+++ b/src/Components/FinancingCenter/Recharge/Recharge.scss
@@ -106,6 +106,6 @@ $border_color: #C8C8C8;
         }
     }
     .r_m_primary_btn{
-        padding: 50px 0 280px 0;
+        padding-top: 50px;
     }
 }
